--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <div class="col-2 col-sm-2 col-md-2">
                                 </div>
                                 <div class="col-7 col-sm-7 col-md-7 ccs">
-                                    <img class="d-block w-100" src="./images/items/item9.jpg" alt="First slide">
+                                    <img class="d-block w-100" src="./images/items/carousel1.jpg" alt="First slide">
                                 </div>
                                 <div class="col-2 col-sm-2 col-md-2">
                                 </div>
@@ -96,7 +96,7 @@
                             <div class="row">
                                 <div class="col-2 col-sm-2 col-md-1"></div>
                                 <div class="col-8 col-sm-8 col-md-8">
-                                    <img class="d-block w-100" src="./images/items/item10.jpg" alt="First slide">
+                                    <img class="d-block w-100" src="./images/items/carousel2.png" alt="First slide">
                                 </div>
                                 <div class="col-2 col-sm-2 col-md-2"></div>
                             </div>
@@ -131,7 +131,7 @@
                           <div class="row">
                               <div class="col-2 col-sm-2 col-md-1"></div>
                               <div class="col-8 col-sm-8 col-md-8">
-                                  <img class="d-block w-100" src="./images/items/item12.jpg" alt="First slide">
+                                  <img class="d-block w-100" src="./images/items/carousel3.jpg" alt="First slide">
                               </div>
                               <div class="col-2 col-sm-2 col-md-2"></div>
                           </div>
@@ -155,7 +155,7 @@
                                 <div class="col-2 col-sm-2 col-md-2">
                                 </div>
                                 <div class="col-7 col-sm-7 col-md-7 ccs">
-                                    <img class="d-block w-100" src="./images/items/item14.png" alt="First slide">
+                                    <img class="d-block w-100" src="./images/items/carousel5.jpg" alt="First slide">
                                 </div>
                                 <div class="col-2 col-sm-2 col-md-2">
                                 </div>
@@ -166,7 +166,7 @@
                             <div class="row">
                                 <div class="col-2 col-sm-2 col-md-1"></div>
                                 <div class="col-8 col-sm-8 col-md-8">
-                                    <img class="d-block w-100" src="./images/items/item15.png" alt="First slide">
+                                    <img class="d-block w-100" src="./images/items/carousel6.png" alt="First slide">
                                 </div>
                                 <div class="col-2 col-sm-2 col-md-2"></div>
                             </div>
@@ -204,7 +204,7 @@
                     <button id='secondB' class='btn-remove ml-auto'>X</button>
                 </div>
                 <h6 id='nothing'>No items in your cart</h6>
-                <a href="cart.html"><button class="btn-cart" href="cart.html">Show Cart</button></a>
+                <a id="show-cart-btn" href="cart.html"><button class="btn-cart" href="cart.html">Show Cart</button></a>
             </div>
         </div>
         </section>
@@ -259,13 +259,13 @@
                     <div id="carouselExampleControls" class="cc carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./images/items/item10.jpg" class="d-block w-100" alt="...">
+                                <img src="./images/items/carousel4.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="./images/items/item2.jpg" class="d-block w-100" alt="...">
+                                <img src="./images/items/carousel5.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="./images/items/item11.jpg" class="d-block w-100" alt="...">
+                                <img src="./images/items/carousel6.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
@@ -443,7 +443,7 @@
                         <div class="col-md-6">
                             <div class="row blog-items">
                                 <div class="col-6 col-sm-6 col-md-5">
-                                    <img src="./images/items/item14.png" alt="">
+                                    <img src="./images/items/story1.jpeg" alt="">
                                 </div>
                                 <div class="col-6 col-sm-6 col-md-7 d-flex align-content-between flex-wrap">
                                     <p>Looking cautiously round, to ascertain that they</p>
@@ -454,7 +454,7 @@
                         <div class="col-md-6">
                             <div class="row blog-items">
                                 <div class="col-6 col-sm-6 col-md-5">
-                                    <img src="./images/items/item15.png" alt="">
+                                    <img src="./images/items/story2.jpg" alt="">
                                 </div>
                                 <div class="col-6 col-sm-6 col-md-7 d-flex align-content-between flex-wrap">
                                     <p>Looking cautiously round, to ascertain that they</p>
@@ -547,10 +547,10 @@
                             <h5>Get in touch</h5>
                             <p>King Street,Melbourne</p>
                             <p>Victoria 3000 Australia</p>
-                            <h6>8 8005958212</h6>
+                            <h6>8005958212</h6>
                             <p>mail@gmail.com</p>
                         </div>
-                        <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+                        <div class="col-6 col-sm-6 col-md-2 col-lg-2">
                             <h5>Useful Link</h5>
                             <ul class="list">
                                 <li>Alice</li>
@@ -562,7 +562,7 @@
                                 <li>Satisfaction</li>
                             </ul>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-3 col-lg-3">
+                        <div class="col-6 col-sm-6 col-md-4 col-lg-4">
                             <h5>Recent Post</h5>
                             <div class="row footer-items">
                                 <div class="col-md-12 col-lg-5">
@@ -584,7 +584,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-3 col-lg-3">
+                        <div class="col-6 col-sm-6 col-md-3 col-lg-3">
                             <h5>Feedback</h5>
                             <input class="feedback form-control form-style" type="email" placeholder="email"></input>
                             <textarea class="feedback form-control form-style" name="" id="" cols="23" rows="5"
