--- a/account.html
+++ b/account.html
@@ -54,7 +54,7 @@
                         <a class="nav-link cart-view cart-items-number">
                             <img id="cart-button" src="./images/icons/cart.png" alt="">
                             <div class="show-number">
-                                <span id="cart-size-number">2</span>
+                                <span class="cart-size"><p id="cart-size-number">2</p></span>
                             </div>
                         </a>
                     </div>
@@ -94,7 +94,7 @@
                     <button id='secondB' class='btn-remove ml-auto'>X</button>
                 </div>
                 <h6 id='nothing'>No items in your cart</h6>
-                <a href="cart.html"><button class="btn-cart" href="cart.html">Show Cart</button></a>
+                <a id="show-cart-btn" href="cart.html"><button class="btn-cart" href="cart.html">Show Cart</button></a>
             </div>
         </div>
     </header>
@@ -156,77 +156,79 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <section class="lower">
-            <div class="container">
-                <div class="row content">
-                    <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-                        <h5>Get in touch</h5>
-                        <p>King Street,Melbourne</p>
-                        <p>Victoria 3000 Australia</p>
-                        <h6>8 8005958212</h6>
-                        <p>mail@gmail.com</p>
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-                        <h5>Useful Link</h5>
-                        <ul class="list">
-                            <li>Alice</li>
-                            <li>Wondered</li>
-                            <li>Companion</li>
-                            <li>Wondered</li>
-                            <li>Modesty</li>
-                            <li>Queen</li>
-                            <li>Satisfaction</li>
-                        </ul>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-3 col-lg-3">
-                        <h5>Recent Post</h5>
-                        <div class="row footer-items">
-                            <div class="col-md-12 col-lg-5">
-                                <img src="./images/items/item15.png" alt="">
+    <footer>
+        <div class='footer'>
+            <section class="lower">
+                <div class="container">
+                    <div class="row content">
+                        <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+                            <h5>Get in touch</h5>
+                            <p>King Street,Melbourne</p>
+                            <p>Victoria 3000 Australia</p>
+                            <h6>8005958212</h6>
+                            <p>mail@gmail.com</p>
+                        </div>
+                        <div class="col-6 col-sm-6 col-md-2 col-lg-2">
+                            <h5>Useful Link</h5>
+                            <ul class="list">
+                                <li>Alice</li>
+                                <li>Wondered</li>
+                                <li>Companion</li>
+                                <li>Wondered</li>
+                                <li>Modesty</li>
+                                <li>Queen</li>
+                                <li>Satisfaction</li>
+                            </ul>
+                        </div>
+                        <div class="col-6 col-sm-6 col-md-4 col-lg-4">
+                            <h5>Recent Post</h5>
+                            <div class="row footer-items">
+                                <div class="col-md-12 col-lg-5">
+                                    <img src="./images/items/item14.png" alt="">
+                                </div>
+                                <div class="col-md-8 col-lg-7 item-text-style">
+                                    <p>Looking cautiously round,to ascertain that they</p>
+                                    <p>September 28,2016</p>
+                                </div>
                             </div>
-                            <div class="col-md-8 col-lg-7 item-text-style">
-                                <p>Looking cautiously round,to ascertain that they</p>
-                                <p>September 28,2016</p>
+                            <hr>
+                            <div class="row footer-items">
+                                <div class="col-md-12 col-lg-5">
+                                    <img src="./images/items/item15.png" alt="">
+                                </div>
+                                <div class="col-md-12 col-lg-7 item-text-style">
+                                    <p>Revolutions of government has would make his</p>
+                                    <p>September 24,2016</p>
+                                </div>
                             </div>
                         </div>
-                        <hr>
-                        <div class="row footer-items">
-                            <div class="col-md-12 col-lg-5">
-                                <img src="./images/items/item14.png" alt="">
-                            </div>
-                            <div class="col-md-12 col-lg-7 item-text-style">
-                                <p>Revolutions of government has would make his</p>
-                                <p>September 24,2016</p>
-                            </div>
+                        <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+                            <h5>Feedback</h5>
+                            <input class="feedback form-control form-style" type="email" placeholder="email"></input>
+                            <textarea class="feedback form-control form-style" name="" id="" cols="23" rows="5"
+                                placeholder="message"></textarea>
+                            <button type="button" class="feedback btn btn-secondary">Submit form</button>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-3 col-lg-3">
-                        <h5>Feedback</h5>
-                        <input class="feedback form-control form-style" type="email" placeholder="email"></input>
-                        <textarea class="feedback form-control form-style" name="" id="" cols="23" rows="5"
-                            placeholder="message"></textarea>
-                        <button type="button" class="feedback btn btn-secondary">Submit form</button>
+                    <div class="container row low">
+                        <img src="./images/icons/whitetwitter.png" alt="">
+                        <img src="./images/icons/whitegoogle.png" alt="">
+                        <img src="./images/icons/whitefacebook.png" alt="">
+                        <img src="./images/icons/whitelinkedin.png" alt="">
+                        <img src="./images/icons/whiteyoutube.png" alt="">
                     </div>
                 </div>
-                <div class="container row low">
-                    <img src="./images/icons/whitetwitter.png" alt="">
-                    <img src="./images/icons/whitegoogle.png" alt="">
-                    <img src="./images/icons/whitefacebook.png" alt="">
-                    <img src="./images/icons/whitelinkedin.png" alt="">
-                    <img src="./images/icons/whiteyoutube.png" alt="">
+            </section>
+            <section class='copyright'>
+                <div class="container d-flex">
+                    <p>&copy; 2016 - Lenox Multi-Concept Template</p>
+                    <p class='ml-auto'>Created by
+                        <img src="./images/icons/icon.png" alt="">
+                        Tareq</p>
                 </div>
-            </div>
-        </section>
-        <section class='copyright'>
-            <div class="container d-flex">
-                <p>&copy; 2016 - Lenox Multi-Concept Template</p>
-                <p class='ml-auto'>Created by
-                    <img src="./images/icons/icon.png" alt="">
-                    Tareq</p>
-            </div>
 
-        </section>
+            </section>
+        </div>
     </footer>
     <script src='./js/custom/account.js'></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
